--- a/index.html
+++ b/index.html
@@ -6,28 +6,11 @@
   <title>Title of the document</title>
 
   <script>
-    (function () {
-      let url = `fvpcircleApp://${window.location.href}`;
-      console.log('url', url);
-      let resultAgent = 'unknown';
-      var userAgent = navigator.userAgent || navigator.vendor || window.opera;
-
-      if (/android/i.test(userAgent)) {
-        resultAgent = "Android";
-      }
-
-      // iOS detection from: http://stackoverflow.com/a/9039885/177710
-      if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
-        resultAgent = "iOS";
-      }
-
-      if (resultAgent === 'Android') {
-        window.location = url;
-
-      } else if (resultAgent === 'iOS') {
-        window.location = url;
-      }
-    })();
+    var triggerAppOpen = function () {
+      window.location = 'https://play.google.com/store/apps/details?id=com.fvptrade';
+      setTimeout(fallbackToStore, 1000);
+    };
+    triggerAppOpen();
   </script>
 </head>
 
