--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <script>
     var triggerAppOpen = function () {
-      window.location = 'https://play.google.com/store/apps/details?id=com.fvptrade';
+      window.location = 'fvpcircleApp://home';
       setTimeout(fallbackToStore, 1000);
     };
     triggerAppOpen();
