--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 
   <script>
     var triggerAppOpen = function () {
-      window.location = 'fvpcircleApp://home';
-      setTimeout(fallbackToStore, 1000);
+      window.location = 'market://details?id=com.fvptrade';
     };
     triggerAppOpen();
   </script>
