--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body style="background-color: red;">
-  Content of the document......
+  <div>Content of the document......</div>
 </body>
 
 </html>
