--- a/index.html
+++ b/index.html
@@ -6,15 +6,33 @@
   <title>Title of the document</title>
 
   <script>
-    var triggerAppOpen = function () {
-      window.location = 'market://details?id=com.fvptrade';
-    };
-    triggerAppOpen();
+    (function () {
+      let url = `haraworks://${window.location.href}`;
+      console.log('url', url);
+      let resultAgent = 'unknown';
+      var userAgent = navigator.userAgent || navigator.vendor || window.opera;
+
+      if (/android/i.test(userAgent)) {
+        resultAgent = "Android";
+      }
+
+      // iOS detection from: http://stackoverflow.com/a/9039885/177710
+      if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
+        resultAgent = "iOS";
+      }
+
+      if (resultAgent === 'Android') {
+        window.location = url;
+
+      } else if (resultAgent === 'iOS') {
+        window.location = url;
+      }
+    })();
   </script>
 </head>
 
-<body style="background-color: red;">
-  <div>Content of the document......</div>
+<body>
+  Content of the document......
 </body>
 
 </html>
