--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
   <script>
     (function () {
-      let url = `fvpcircleApp://${window.location.href}`;
-      console.log('url', url);
+      let url = `intent://details?id=com.fvptrade`;
+      
       let resultAgent = 'unknown';
       var userAgent = navigator.userAgent || navigator.vendor || window.opera;
 
