--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <script>
     (function () {
-      window.location = `intent://details?id=com.fvptrade`;
+      window.location = `market://details?id=com.fvptrade`;
     })();
   </script>
 </head>
