--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
 <head>
   <meta charset="UTF-8">
   <title>Title of the document</title>
+  <script>
+    var now = new Date().valueOf();
+    setTimeout(function () {
+      if (new Date().valueOf() - now > 100) return;
+      window.location.href = "https://itunes.apple.com/appdir";
+    }, 25);
+    window.location.href = "fvpcircle://hostName/path";
+  </script>
 </head>
 
 <body>
   Content of the document......
-  <a href = "fvpcircle://hostName/path">Link</a>
 </body>
 
 </html>
