--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
   <title>Title of the document</title>
   <script>
     setTimeout(function () {
-      window.location.href = "fvpcircle://hostName/path";
-    }, 3000)
+     
+    }, 3000);
   </script>
 </head>
 
 <body>
   Content of the document......
+  <a href="fvpcircle://hostName/path" id="deeplink">return back to my app </a>
 </body>
 
 </html>
