--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <script>
     setTimeout(function () {
       var newUrl = new URL('fvpcircleapp://fvpcircle/1');
-      var win = window.open(newUrl, '_blank');
-      win.focus();
+      window.open(newUrl, '_blank');
     }, 3000);
   </script>
 </head>
