--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   Content of the document......
-  <a href="fvpcircleapp://fvpcircle/1" id="deeplink">return back to my app </a>
+  <a href="https://www.google.com/" id="deeplink">return back to my app </a>
 </body>
 
 </html>
