--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
   <title>Title of the document</title>
   <script>
     setTimeout(function () {
-      var button = document.getElementById('deeplink');
-      button.click();
+      window.location = "intent://fvpcircle/#Intent;scheme=fvpcircleapp;package=com.fvptrade;end";
     }, 3000);
   </script>
 </head>
 
 <body>
   Content of the document......
-  <a href="intent://fvpcircle/#Intent;scheme=fvpcircleapp;package=com.fvptrade;end" id="deeplink">return back to my app </a>
+  <a href="intent://fvpcircle/#Intent;scheme=fvpcircleapp;package=com.fvptrade;end" id="deeplink">return back to my app</a>
 </body>
 
 </html>
