--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
   <title>Title of the document</title>
   <script>
     setTimeout(function () {
-      window.location = "intent://fvpcircle/#Intent;scheme=fvpcircleapp;package=com.fvptrade;end";
+      window.location.href = "intent://scan/#Intent;scheme=fvpcircleapp;package=com.fvptrade;S.browser_fallback_url=https://play.google.com/store/apps/details?id=com.fvptrade;end";
     }, 3000);
   </script>
 </head>
 
 <body>
   Content of the document......
-  <a href="intent://fvpcircle/#Intent;scheme=fvpcircleapp;package=com.fvptrade;end" id="deeplink">return back to my app</a>
+  <a href="intent://scan/#Intent;scheme=fvpcircleapp;package=com.fvptrade;S.browser_fallback_url=https://play.google.com/store/apps/details?id=com.fvptrade;end"
+    id="deeplink">return back to my app
+  </a>
 </body>
 
 </html>
