--- a/index.html
+++ b/index.html
@@ -6,16 +6,15 @@
   <title>Title of the document</title>
   <script>
     setTimeout(function () {
-      window.location.href = "intent://scan/#Intent;scheme=fvpcircleapp;package=com.fvptrade;S.browser_fallback_url=fvpcircleapp://home;end";
+      window.location.href = 'intent://scan/#Intent;scheme=fvpcircleapp;package=com.fvptrade;S.browser_fallback_url=http%3A%2F%2Fzxing.org;end';
     }, 3000);
   </script>
 </head>
 
 <body>
   Content of the document......
-  <a href="intent://scan/#Intent;scheme=fvpcircleapp;package=com.fvptrade;S.browser_fallback_url=fvpcircleapp://home;end"
-    id="deeplink">return back to my app
-  </a>
+  <a href="intent://scan/#Intent;scheme=fvpcircleapp;package=com.fvptrade;S.browser_fallback_url=http%3A%2F%2Fzxing.org;end"
+    id="deeplink">return back to my app </a>
 </body>
 
 </html>
