--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Title of the document</title>
   <script>
     setTimeout(function () {
-     window.location.href = 'fvpcircleapp://https://fe-fvp.stg.inspirelab.io/signup?ref=terminate001';
+     window.location = 'fvpcircleapp://https://fe-fvp.stg.inspirelab.io/signup?ref=terminate001';
     }, 3000);
   </script>
 </head>
