--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <title>Title of the document</title>
   <script>
     setTimeout(function () {
-     window.location = 'fvpcircleapp://https://fe-fvp.stg.inspirelab.io/signup?ref=terminate001';
+     window.location = 'intent://scan/#Intent;scheme=fvpcircleapp;package=com.fvptrade;end';
     }, 3000);
   </script>
 </head>
 
 <body>
   Content of the document......
-  <a href="fvpcircleapp://https://fe-fvp.stg.inspirelab.io/signup?ref=terminate001"
+  <a href="intent://scan/#Intent;scheme=fvpcircleapp;package=com.fvptrade;end"
     id="deeplink">return back to my app </a>
 </body>
 
