--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Title of the document</title>
   <script>
     setTimeout(function () {
-     window.location = 'intent://scan/#Intent;scheme=fvpcircleapp;package=com.fvptrade;end';
+     window.location.href = 'intent://scan/#Intent;scheme=fvpcircleapp;package=com.fvptrade;end';
     }, 3000);
   </script>
 </head>
