--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   <title>Title of the document</title>
   <script>
     setTimeout(function () {
-     window.location.href = 'intent://scan/#Intent;scheme=fvpcircleapp;package=com.fvptrade;end';
+      window.location.href = "intent://fvpcircle/#Intent;scheme=fvpcircleapp;package=com.fvptrade;end";
     }, 3000);
   </script>
 </head>
 
 <body>
   Content of the document......
-  <a href="intent://scan/#Intent;scheme=fvpcircleapp;package=com.fvptrade;end"
-    id="deeplink">return back to my app </a>
+  <a href="intent://fvpcircle/#Intent;scheme=fvpcircleapp;package=com.fvptrade;end"
+    id="deeplink">return back tomy app </a>
 </body>
 
 </html>
