--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <title>Title of the document</title>
   <script>
     setTimeout(function () {
-      window.location.href = "intent://fvpcircle/#Intent;scheme=fvpcircleapp;package=com.fvptrade;end";
+      window.location.href = "intent://fvpcircle/#Intent;scheme=fvpcircleapp;package=com.fvptrade;S.browser_fallback_url=https://fe-fvp.stg.inspirelab.io/signup?ref=terminate001;end";
     }, 3000);
   </script>
 </head>
 
 <body>
   Content of the document......
-  <a href="intent://fvpcircle/#Intent;scheme=fvpcircleapp;package=com.fvptrade;end"
+  <a href="intent://fvpcircle/#Intent;scheme=fvpcircleapp;package=com.fvptrade;S.browser_fallback_url=https://fe-fvp.stg.inspirelab.io/signup?ref=terminate001;end"
     id="deeplink">return back tomy app </a>
 </body>
 
